# OpenEnv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
data/easy/: clean.csv  dirty.csv
data/hard/: clean.csv  dirty.csv
data/medium/: clean.csv  dirty.csv
environment/: __init__.py  env.py  grader.py  models.py
scripts/: __init__.py  generate_datasets.py
server/: __init__.py  app.py
tasks/: __init__.py  base_task.py  task_easy.py  task_hard.py  task_medium.py
